@@ -59,8 +59,7 @@ import org.sosy_lab.java_smt.solvers.bitwuzla.api.Vector_Int;
 import org.sosy_lab.java_smt.solvers.bitwuzla.api.Vector_Sort;
 import org.sosy_lab.java_smt.solvers.bitwuzla.api.Vector_Term;
 
-public class BitwuzlaFormulaCreator
-    extends FormulaCreator<Term, Sort, TermManager, BitwuzlaDeclaration> {
+class BitwuzlaFormulaCreator extends FormulaCreator<Term, Sort, TermManager, BitwuzlaDeclaration> {
 
   private final Table<String, Sort, Term> formulaCache = HashBasedTable.create();
 
@@ -80,7 +79,7 @@ public class BitwuzlaFormulaCreator
    */
   private final Map<String, Term> constraintsForVariables = new HashMap<>();
 
-  protected BitwuzlaFormulaCreator(TermManager pTermManager) {
+  BitwuzlaFormulaCreator(TermManager pTermManager) {
     super(pTermManager, pTermManager.mk_bool_sort(), null, null, null, null);
   }
 
@@ -125,15 +124,15 @@ public class BitwuzlaFormulaCreator
   @Override
   protected FloatingPointFormula encapsulateFloatingPoint(Term pTerm) {
     assert getFormulaType(pTerm).isFloatingPointType()
-        : String.format("%s is no FP, but %s (%s)", pTerm, pTerm.sort(), getFormulaType(pTerm));
+        : "%s is no FP, but %s (%s)".formatted(pTerm, pTerm.sort(), getFormulaType(pTerm));
     return new BitwuzlaFloatingPointFormula(pTerm);
   }
 
   @Override
   protected FloatingPointRoundingModeFormula encapsulateRoundingMode(Term pTerm) {
     assert getFormulaType(pTerm).isFloatingPointRoundingModeType()
-        : String.format(
-            "%s is no FP rounding mode, but %s (%s)", pTerm, pTerm.sort(), getFormulaType(pTerm));
+        : "%s is no FP rounding mode, but %s (%s)"
+            .formatted(pTerm, pTerm.sort(), getFormulaType(pTerm));
     return new BitwuzlaFloatingPointRoundingModeFormula(pTerm);
   }
 
@@ -351,8 +350,7 @@ public class BitwuzlaFormulaCreator
   @Override
   public <T extends Formula> T encapsulate(FormulaType<T> pType, Term pTerm) {
     assert pType.equals(getFormulaType(pTerm))
-        : String.format(
-            "Trying to encapsulate formula of type %s as %s", getFormulaType(pTerm), pType);
+        : "Trying to encapsulate formula of type %s as %s".formatted(getFormulaType(pTerm), pType);
     if (pType.isBooleanType()) {
       return (T) new BitwuzlaBooleanFormula(pTerm);
     } else if (pType.isArrayType()) {
@@ -499,34 +497,32 @@ public class BitwuzlaFormulaCreator
   public Term callFunctionImpl(BitwuzlaDeclaration declaration, List<Term> args) {
     // For UFs the declaration needs to be a const wrapping of the function sort
     // For all other functions it needs to be the kind
-    // BUT, we can never use a bitwuzla_term_is... function on a KIND
-    if (!declaration.isKind() && declaration.getTerm().num_indices() > 0) {
-      // The term might be indexed, then we need index creation
-      Term term = declaration.getTerm();
-      Kind properKind = term.kind();
-      return environment.mk_term(properKind, new Vector_Term(args), term.indices());
-    }
-
-    if (!declaration.isKind() && declaration.getTerm().sort().is_fun()) {
+    if (declaration.isTerm() && declaration.getTerm().sort().is_fun()) {
+      // UF symbol
       Vector_Term functionAndArgs = new Vector_Term();
       functionAndArgs.add(declaration.getTerm());
       functionAndArgs.addAll(args);
       return environment.mk_term(Kind.APPLY, functionAndArgs, new Vector_Int());
+    } else if (declaration.isTerm() && declaration.getTerm().num_indices() == 0) {
+      // Constant UF symbol
+      return declaration.getTerm();
+    } else if (declaration.isTerm() && declaration.getTerm().num_indices() > 0) {
+      // Indexed operator
+      Term term = declaration.getTerm();
+      Kind properKind = term.kind();
+      return environment.mk_term(properKind, new Vector_Term(args), term.indices());
+    } else {
+      // Operator
+      return environment.mk_term(declaration.getKind(), new Vector_Term(args), new Vector_Int());
     }
-
-    assert declaration.isKind();
-
-    return environment.mk_term(declaration.getKind(), new Vector_Term(args), new Vector_Int());
   }
 
   @Override
   public BitwuzlaDeclaration declareUFImpl(String name, Sort pReturnType, List<Sort> pArgTypes) {
-    if (pArgTypes.isEmpty()) {
-      // Bitwuzla does not support UFs with no args, so we make a variable
-      // TODO: implement
-      throw new UnsupportedOperationException("Bitwuzla does not support 0 arity UFs.");
-    }
-    Sort functionSort = environment.mk_fun_sort(new Vector_Sort(pArgTypes), pReturnType);
+    Sort functionSort =
+        pArgTypes.isEmpty()
+            ? pReturnType
+            : environment.mk_fun_sort(new Vector_Sort(pArgTypes), pReturnType);
 
     Term maybeFormula = formulaCache.get(name, functionSort);
     if (maybeFormula != null) {
@@ -651,8 +647,7 @@ public class BitwuzlaFormulaCreator
     } else if (term.is_rm_value_rtz()) {
       return FloatingPointRoundingMode.TOWARD_ZERO;
     } else {
-      throw new IllegalArgumentException(
-          String.format("Unknown rounding mode in Term '%s'.", term));
+      throw new IllegalArgumentException("Unknown rounding mode in Term '%s'.".formatted(term));
     }
   }
 }
