@@ -38,13 +38,13 @@ import org.sosy_lab.java_smt.solvers.opensmt.api.SymRef;
 import org.sosy_lab.java_smt.solvers.opensmt.api.Symbol;
 import org.sosy_lab.java_smt.solvers.opensmt.api.sstat;
 
-public abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<T> {
+abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<T> {
 
   protected final OpenSmtFormulaCreator creator;
   protected final MainSolver osmtSolver;
   protected final SMTConfig osmtConfig;
 
-  protected OpenSmtAbstractProver(
+  OpenSmtAbstractProver(
       OpenSmtFormulaCreator pFormulaCreator,
       FormulaManager pMgr,
       ShutdownNotifier pShutdownNotifier,
@@ -200,9 +200,8 @@ public abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<
     if (errors.isEmpty()) {
       return "Unknown reason.";
     } else {
-      return String.format(
-          "Assertions use features %s that are not supported by the specified logic %s.",
-          errors, creator.getLogic());
+      return "Assertions use features %s that are not supported by the specified logic %s."
+          .formatted(errors, creator.getLogic());
     }
   }
 
@@ -211,7 +210,7 @@ public abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<
   protected boolean isUnsatImpl() throws InterruptedException, SolverException {
     closeAllEvaluators();
     sstat result;
-    try (ShutdownHook listener = new ShutdownHook(shutdownNotifier, osmtSolver::stop)) {
+    try (ShutdownHook listener = new ShutdownHook(shutdownNotifier, osmtSolver::notifyStop)) {
       shutdownNotifier.shutdownIfNecessary();
       try {
         result = osmtSolver.check();
@@ -223,10 +222,10 @@ public abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<
           // such that the solver can simplify and try to reason about a query as far as possible.
           // In several cases, the complex logics are not required for reasoning
           // and OpenSMT succeeds with solving a query.
-          String reason = String.format(" Most likely reason: %s", getReasonFromSolverFeatures());
+          String reason = " Most likely reason: %s".formatted(getReasonFromSolverFeatures());
           throw new SolverException(
-              String.format(
-                  "OpenSMT crashed while checking satisfiability. Most likely reason: %s", reason));
+              "OpenSMT crashed while checking satisfiability. Most likely reason: %s"
+                  .formatted(reason));
         } else {
           throw new SolverException("OpenSMT crashed while checking satisfiability.", e);
         }
@@ -258,7 +257,7 @@ public abstract class OpenSmtAbstractProver<T> extends AbstractProverWithAllSat<
   @Override
   public Optional<List<BooleanFormula>> unsatCoreOverAssumptions(
       Collection<BooleanFormula> pAssumptions) throws SolverException, InterruptedException {
-    throw new UnsupportedOperationException(ASSUMPTION_SOLVING_NOT_SUPPORTED);
+    throw new UnsupportedOperationException(UNSAT_CORE_WITH_ASSUMPTIONS_NOT_SUPPORTED);
   }
 
   @Override
